--- a/src/main/resources/static/css/ki-test.css
+++ b/src/main/resources/static/css/ki-test.css
@@ -1,9 +1,14 @@
 @charset "UTF-8";
 /* general */
-
+/* 
+font-family: 'Cute Font', cursive;
+font-family: 'Gamja Flower', cursive;
+font-family: 'Jua', sans-serif;
+font-family: 'Stylish', sans-serif; 
+*/
 *,*:before,*:after{box-sizing:inherit;}
 html{font-size:20px;box-sizing:border-box;}
-body {margin:0; padding:0; font-size:.9rem; font-weight:400;font-family:'Noto Sans KR'; line-height:1.25;  color:#333;}
+body {margin:0; padding:0; font-size:.9rem; font-weight:400;font-family:'Stylish'; line-height:1.25;  color:#333;}
 ul,ol,li,dl,dt,dd{margin:0; padding:0; list-style: none;}
 p,h1,h2,h3,h4,h5,h6{margin:0; padding:0;}
 a {color:inherit; text-decoration:none;}
@@ -768,7 +773,7 @@ html::before {
 	color: #fff;
 	transition: all .25s ease;
 	font-size: 0.9rem;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Gamja Flower', 'Montserrat', sans-serif;
 	font-weight: 500;
 	opacity: 0;
 	visibility: hidden;
@@ -827,7 +832,7 @@ body.fp-viewing-4 #footer {
 	margin-bottom: 1.35rem;
 	line-height: 1;
 	font-size: 2.5rem;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Gamja Flower', 'Montserrat', sans-serif;
 	font-weight: 700;
 	}	
 .section-subtit {
@@ -941,7 +946,7 @@ body.fp-viewing-4 #footer {
     transform: translateX(-50%);
     transition: all .3s ease;
 	font-size: 0.6rem;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Gamja Flower', 'Montserrat', sans-serif;
     font-weight: 500;
 	}	
 	/* 메인화면 동영상 섹션*/
@@ -1034,7 +1039,7 @@ body.fp-viewing-4 #footer {
 	color: #fff;
     line-height: 1;
     font-size: 1rem;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Gamja Flower', 'Montserrat', sans-serif;
 	font-weight: 100;
 	z-index: 60;
 	}	
@@ -1072,7 +1077,7 @@ body.fp-viewing-4 #footer {
 	line-height: 1;
 	text-transform: uppercase;
 	font-size: 1rem;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Gamja Flower', 'Montserrat', sans-serif;
     font-weight: 500;
 	}
 .intro-list dl {
@@ -1473,7 +1478,7 @@ body.fp-viewing-4 #footer {
     letter-spacing: -0.05em;
     font-size: 0.7rem;
     font-weight: 100;
-    font-family: "ë§‘ì€ ê³ ë”•", Malgun Gothic, sans-serif;
+    font-family:  Malgun Gothic, sans-serif;
 	}	
 .dic-search {	
     margin-top: -0.1rem;
@@ -1507,14 +1512,14 @@ body.fp-viewing-4 #footer {
 	color: rgba(255,255,255, .5);
 	letter-spacing: -0.05em;
 	font-size: 0.75rem;
-    font-family: "ë§‘ì€ ê³ ë”•", Malgun Gothic, sans-serif;
+    font-family: Malgun Gothic, sans-serif;
 	font-weight: 100;
 	}
 .dic-search .form-input::-webkit-input-placeholder { 
 	color: rgba(255,255,255, .5);
 	letter-spacing: -0.05em;
 	font-size: 0.75rem;
-    font-family: "ë§‘ì€ ê³ ë”•", Malgun Gothic, sans-serif;
+    font-family:  Malgun Gothic, sans-serif;
 	font-weight: 100;
 	}
 .dic-search .btn {
@@ -1564,7 +1569,7 @@ body.fp-viewing-4 #footer {
 	color: #fff;
     line-height: 1;
     font-size: 1rem;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Gamja Flower', 'Montserrat', sans-serif;
 	font-weight: 100;
 	z-index: 60;
 	}	
@@ -1596,7 +1601,7 @@ body.fp-viewing-4 #footer {
 	line-height: 1;
 	text-transform: uppercase;
 	font-size: 1rem;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Gamja Flower', 'Montserrat', sans-serif;
     font-weight: 500;
 	}
 .medi-list dl {
@@ -1652,7 +1657,7 @@ body.fp-viewing-4 #footer {
 	color: #fff;
     line-height: 1;
     font-size: 1rem;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Gamja Flower', 'Montserrat', sans-serif;
 	font-weight: 100;
 	z-index: 60;
 	}	
@@ -1684,7 +1689,7 @@ body.fp-viewing-4 #footer {
 	line-height: 1;
 	text-transform: uppercase;
 	font-size: 1rem;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Gamja Flower', 'Montserrat', sans-serif;
     font-weight: 500;
 	}
 .comm-list dl {
@@ -1891,7 +1896,7 @@ body.fp-viewing-4 #footer {
 	color: #555;
 	line-height: 1;
 	font-size: 0.85rem;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Gamja Flower', 'Montserrat', sans-serif;
 	font-weight: 500;
 	}
 
